# UniverseCrasher

./: CMakeLists.txt  build.sh  main.cpp  setup.sh
Components/: CMakeLists.txt
Components/Inc/: HealthComponent.hpp  LifeTimeComponent.hpp  MoveComponent.hpp  WeaponComponent.hpp
Components/Src/: HealthComponent.cpp  LifeTimeComponent.cpp  MoveComponent.cpp  WeaponComponent.cpp
Drawing/: CMakeLists.txt
Drawing/Inc/: TextureManager.hpp  WindowDrawManager.hpp
Drawing/Src/: WindowDrawManager.cpp
Game/: CMakeLists.txt
Game/Inc/: Collidable.hpp  Damageable.hpp  GameConst.hpp  GameManager.hpp  GameStates.hpp  Scene.hpp  SceneFirst.hpp  Tickable.hpp
Game/Src/: GameManager.cpp  SceneFirst.cpp
GameObjects/: CMakeLists.txt
GameObjects/Inc/: GameObject.hpp  SimpleRectObject.hpp  TextObject.hpp  TexturedObject.hpp
GameObjects/Src/: SimpleRectObject.cpp  TexturedObject.cpp
Objects/: CMakeLists.txt
Objects/Inc/: Arrow.hpp  Balloon.hpp  Box.hpp  Controller.hpp  CreateTemplates.hpp  GameObject.hpp  GameObjectComponent.hpp  GraphicsObject.hpp  Player.hpp  SimpleRectangleObject.hpp  TexturedObject.hpp  Wall.hpp  WeaponType.hpp
Objects/Src/: Balloon.cpp  Controller.cpp  GameObject.cpp  GraphicsObject.cpp  Player.cpp  SimpleRectangleObject.cpp  TexturedObject.cpp
Utilities/: Color.hpp  Debug.hpp  Defines.h  Maths.hpp
Utilities/TemporaryAbandoned/: TextObject.hpp
